// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render empty tooltips 1`] = `
<div
  id="tooltip"
/>
`;

exports[`should not render empty tooltips 2`] = `
<div
  id="tooltip"
/>
`;

exports[`should render 1`] = `
<React.Fragment>
  <div
    id="tooltip"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</React.Fragment>
`;

exports[`should render 2`] = `
<React.Fragment>
  <div
    id="tooltip"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <TooltipPortal>
    <ScreenPositionFixer
      ready={false}
    />
  </TooltipPortal>
</React.Fragment>
`;
